--- a/estilos/media-query.css
+++ b/estilos/media-query.css
@@ -8,12 +8,14 @@
     Grandes telas: acima de 1200px 
 */
 
+/* CONFIGURAÇÃO PARA TABLET */
 @media screen and (min-width: 768px) and (max-width: 992px) {
     body {
         background-image: linear-gradient(to top, #49a09d, #5f2c82);
     }
     section#login {
         width: 80vw;
+        height: 300px;
     }
     section#login > div#imagem {
         float: left;
@@ -26,12 +28,14 @@
     }
 }
 
+/* CONFIGURAÇÃO PARA DESKTOP */
 @media screen and (min-width: 992px) {
     body {
         background-image: linear-gradient(to top, #49a09d, #5f2c82);
     }
     section#login {
         width: 950px;
+        height: 350px;
     }
     section#login > div#imagem {
         float: right;
@@ -43,10 +47,11 @@
         width: 50%;
     }
     div#formulario > h1 {
-        font-size:2em;
+        font-size: 2em;
     }
     div#formulario > p {
-        font-size: 1.2em;
+        font-size: 1em;
+        margin: 20px 0;
     }
 }
 
